[package]
name = "rust-srt-playground"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
bytes = "1.11.0"
futures = "0.3.31"
futures-util = "0.3.31"
opencv = "0.97.2"
pretty_env_logger = "0.5.0"
srt-tokio = "0.4.4"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.17"

[[bin]]
name = "v1_sender"
path = "v1/sender.rs"

[[bin]]
name = "v1_receiver"
path = "v1/receiver.rs"

[[bin]]
name = "v2_sender"
path = "v2/sender.rs"

[[bin]]
name = "v2_receiver"
path = "v2/receiver.rs"

[[bin]]
name = "v3_sender"
path = "v3/sender.rs"

[[bin]]
name = "v3_receiver"
path = "v3/receiver.rs"

[[bin]]
name = "v4_sender"
path = "v4/sender.rs"

[[bin]]
name = "v4_receiver"
path = "v4/receiver.rs"

[[bin]]
name = "v5_sender"
path = "v5/sender.rs"

[[bin]]
name = "v5_receiver"
path = "v5/receiver.rs"
